--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest]
-        php: [ "7.0", "7.1", "7.2", "7.3", "7.4" ]
+        php: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         phpunit-filename: [phpunit]
         grpc-version: [grpc]
         include:
