feat: introduce bare metal solution (#5316)

--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,7 @@
         "google/cloud-asset": "1.6.8",
         "google/cloud-assured-workloads": "0.5.3",
         "google/cloud-automl": "1.4.6",
+        "google/cloud-bare-metal-solution": "master",
         "google/cloud-bigquery": "1.23.6",
         "google/cloud-bigquery-connection": "0.7.2",
         "google/cloud-bigquery-data-exchange": "0.1.0",
@@ -214,6 +215,7 @@
             "GPBMetadata\\Google\\Cloud\\Asset\\": "Asset/metadata",
             "GPBMetadata\\Google\\Cloud\\Assuredworkloads\\": "AssuredWorkloads/metadata",
             "GPBMetadata\\Google\\Cloud\\Automl\\": "AutoMl/metadata",
+            "GPBMetadata\\Google\\Cloud\\Baremetalsolution\\": "BareMetalSolution/metadata",
             "GPBMetadata\\Google\\Cloud\\Bigquery\\Connection\\": "BigQueryConnection/metadata",
             "GPBMetadata\\Google\\Cloud\\Bigquery\\Dataexchange\\": "BigQueryDataExchange/metadata",
             "GPBMetadata\\Google\\Cloud\\Bigquery\\Datatransfer\\": "BigQueryDataTransfer/metadata",
@@ -337,6 +339,7 @@
             "Google\\Cloud\\Asset\\": "Asset/src",
             "Google\\Cloud\\AssuredWorkloads\\": "AssuredWorkloads/src",
             "Google\\Cloud\\AutoMl\\": "AutoMl/src",
+            "Google\\Cloud\\BaremetalSolution\\": "BareMetalSolution/src",
             "Google\\Cloud\\BigQuery\\": "BigQuery/src",
             "Google\\Cloud\\BigQuery\\Connection\\": "BigQueryConnection/src",
             "Google\\Cloud\\BigQuery\\DataExchange\\": "BigQueryDataExchange/src",
@@ -464,6 +467,7 @@
             "Google\\Cloud\\Asset\\Tests\\": "Asset/tests",
             "Google\\Cloud\\AssuredWorkloads\\Tests\\": "AssuredWorkloads/tests",
             "Google\\Cloud\\AutoMl\\Tests\\": "AutoMl/tests",
+            "Google\\Cloud\\BaremetalSolution\\Tests\\": "BareMetalSolution/tests",
             "Google\\Cloud\\BigQuery\\Connection\\Tests\\": "BigQueryConnection/tests",
             "Google\\Cloud\\BigQuery\\DataExchange\\Tests\\": "BigQueryDataExchange/tests",
             "Google\\Cloud\\BigQuery\\DataTransfer\\Tests\\": "BigQueryDataTransfer/tests",
