feat: introduce run (#5346)
* feat: introduce run

* add newline

* add name attribute

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2835,6 +2835,14 @@
             ]
         },
         {
+            "id": "cloud-run",
+            "name": "google/cloud-run",
+            "defaultService": "run/readme",
+            "versions": [
+                "main"
+            ]
+        },
+        {
             "id": "cloud-scheduler",
             "name": "google/cloud-scheduler",
             "defaultService": "scheduler/readme",
