--- a/composer.json
+++ b/composer.json
@@ -163,6 +163,7 @@
         "google/cloud-resource-manager": "0.3.2",
         "google/cloud-resource-settings": "0.1.5",
         "google/cloud-retail": "0.5.0",
+        "google/cloud-run": "master",
         "google/cloud-scheduler": "1.6.3",
         "google/cloud-secret-manager": "1.9.2",
         "google/cloud-security-center": "1.7.0",
@@ -280,6 +281,7 @@
             "GPBMetadata\\Google\\Cloud\\Resourcemanager\\": "ResourceManager/metadata",
             "GPBMetadata\\Google\\Cloud\\Resourcesettings\\": "ResourceSettings/metadata",
             "GPBMetadata\\Google\\Cloud\\Retail\\": "Retail/metadata",
+            "GPBMetadata\\Google\\Cloud\\Run\\": "Run/metadata",
             "GPBMetadata\\Google\\Cloud\\Scheduler\\": "Scheduler/metadata",
             "GPBMetadata\\Google\\Cloud\\Secretmanager\\": "SecretManager/metadata",
             "GPBMetadata\\Google\\Cloud\\Secrets\\": "SecretManager/metadata",
@@ -423,6 +425,7 @@
             "Google\\Cloud\\ResourceManager\\": "ResourceManager/src",
             "Google\\Cloud\\ResourceSettings\\": "ResourceSettings/src",
             "Google\\Cloud\\Retail\\": "Retail/src",
+            "Google\\Cloud\\Run\\": "Run/src",
             "Google\\Cloud\\Scheduler\\": "Scheduler/src",
             "Google\\Cloud\\SecretManager\\": "SecretManager/src",
             "Google\\Cloud\\SecurityCenter\\": "SecurityCenter/src",
@@ -551,6 +554,7 @@
             "Google\\Cloud\\ResourceManager\\Tests\\": "ResourceManager/tests",
             "Google\\Cloud\\ResourceSettings\\Tests\\": "ResourceSettings/tests",
             "Google\\Cloud\\Retail\\Tests\\": "Retail/tests",
+            "Google\\Cloud\\Run\\Tests\\": "Run/tests",
             "Google\\Cloud\\Scheduler\\Tests\\": "Scheduler/tests",
             "Google\\Cloud\\SecretManager\\Tests\\": "SecretManager/tests",
             "Google\\Cloud\\SecurityCenter\\Tests\\": "SecurityCenter/tests",
